--- a/clock.html
+++ b/clock.html
@@ -13,7 +13,7 @@
     <div class="background-image"></div>
     <div class="top">
       <div class="watch-container">
-        <div class="watch">
+        <div id="watch">
           <div class="hours">
             <div class="digit-container">
               <span class="digit" id="hour1">0</span>
