adjusted city name spacing depending on OS

--- a/clock.html
+++ b/clock.html
@@ -66,19 +66,19 @@
       <div data-index="6" class="hexagon">&#x2B22;</div>
     </div>
     <div class="names">
-      <div class="country-container"><span class="country">London</span></div>
+      <div class="name-container"><span class="name">London</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Berlin</span></div>
+      <div class="name-container"><span class="name">Berlin</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Kyiv</span></div>
+      <div class="name-container"><span class="name">Kyiv</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Victoria</span></div>
+      <div class="name-container"><span class="name">Victoria</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Bangkok</span></div>
+      <div class="name-container"><span class="name">Bangkok</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Hong Kong</span></div>
+      <div class="name-container"><span class="name">Hong Kong</span></div>
       <div class="name-separator"></div>
-      <div class="country-container"><span class="country">Tokyo</span></div>
+      <div class="name-container"><span class="name">Tokyo</span></div>
     </div>
   </body>
 </html>
