downloaded scripts and images offline

--- a/clock.html
+++ b/clock.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Clock</title>
     <link rel="stylesheet" href="main.css" media="screen" charset="utf-8">
-    <script src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
-    <script src="http://momentjs.com/downloads/moment-timezone-with-data-2010-2020.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script src="vendor/moment-with-locales.min.js"></script>
+    <script src="vendor/moment-timezone-with-data-2010-2020.min.js"></script>
+    <script src="vendor/jquery-1.12.1.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
