wallpapers, sidebar, localStorage

--- a/clock.html
+++ b/clock.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="background-image"></div>
+    <div class="background-image" id="background"></div>
     <div class="top">
       <div class="watch-container">
         <div id="watch">
@@ -79,6 +79,12 @@
       <div class="name-container"><span class="name">Hong Kong</span></div>
       <div class="name-separator"></div>
       <div class="name-container"><span class="name">Tokyo</span></div>
+    </div>
+  </div>
+    <div id="drawer">
+      <ul class="menu-list">
+        <li class="menu-item"><span>Show city backgrounds</span><input id="cityBG" type="checkbox" name="cityBG" value="true" class="pull-right" checked></li>
+      </ul>
     </div>
   </body>
 </html>
