--- a/clock.html
+++ b/clock.html
@@ -15,6 +15,7 @@
       <div class="watch-container">
         <div id="watch">
           <div class="hours">
+            <div class="unit">Hours</div>
             <div class="digit-container">
               <span class="digit" id="hour1">0</span>
             </div>
@@ -26,6 +27,7 @@
             <span class="watch-separator">:</span>
           </div>
           <div class="minutes">
+            <div class="unit">Minutes</div>
             <div class="digit-container">
               <span class="digit" id="minute1">0</span>
             </div>
@@ -37,6 +39,7 @@
             <span class="watch-separator">:</span>
           </div>
           <div class="seconds">
+            <div class="unit">Seconds</div>
             <div class="digit-container">
               <span class="digit" id="second1">0</span>
             </div>
