--- a/clock.html
+++ b/clock.html
@@ -49,44 +49,108 @@
           </div>
         </div>
       </div>
+
+      <div class="date-container">
+        <div class="date">
+          <div class="date-part">
+            <div id="dayOfWeek">-</div>
+          </div>
+          <div class="date-seporator">|</div>
+          <div class="date-part" style="width: 200px">
+            <div id="dayAndMonth">
+              <span id="dayOfMonth">-</span> of <span id="month"></span>
+            </div>
+          </div>
+          <div class="date-seporator">|</div>
+          <div class="date-part">
+            <div id="year">-</div>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </div>
-  <div class="bottom">
-    <div class="separator"></div>
-    <div class="selector">
-      <div data-index="0" class="hexagon">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="1" class="hexagon">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="2" class="hexagon">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="3" class="hexagon active">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="4" class="hexagon">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="5" class="hexagon">&#x2B22;</div>
-      <div class="hex-separator"></div>
-      <div data-index="6" class="hexagon">&#x2B22;</div>
+    <div class="bottom">
+      <div class="separator"></div>
+      <div class="zones">
+        <div class="zone-container">
+          <span data-index="0" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="1" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="2" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="3" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="4" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="5" class="zone">-</span>
+        </div>
+        <div class="zone-separator"></div>
+        <div class="zone-container">
+          <span data-index="6" class="zone">-</span>
+        </div>
+      </div>
+      <div class="selector">
+        <div data-index="0" class="hexagon">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="1" class="hexagon">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="2" class="hexagon">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="3" class="hexagon active">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="4" class="hexagon">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="5" class="hexagon">&#x2B22;</div>
+        <div class="hex-separator"></div>
+        <div data-index="6" class="hexagon">&#x2B22;</div>
+      </div>
+      <div class="names">
+        <div class="name-container">
+          <span data-index="0" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="1" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="2" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="3" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="4" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="5" class="name">-</span>
+        </div>
+        <div class="name-separator"></div>
+        <div class="name-container">
+          <span data-index="6" class="name">-</span>
+        </div>
+      </div>
     </div>
-    <div class="names">
-      <div class="name-container"><span class="name">London</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Berlin</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Kyiv</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Victoria</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Bangkok</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Hong Kong</span></div>
-      <div class="name-separator"></div>
-      <div class="name-container"><span class="name">Tokyo</span></div>
-    </div>
-  </div>
     <div id="drawer">
       <ul class="menu-list">
         <li class="menu-item"><span>Show city backgrounds</span><input id="cityBG" type="checkbox" name="cityBG" value="true" class="pull-right" checked></li>
+        <li class="menu-item"><span>Hide timezones</span><input id="hideTZ" type="checkbox" name="hideTZ" value="true" class="pull-right"></li>
+        <li class="menu-item"><span>Hide city names</span><input id="hideNames" type="checkbox" name="hideNames" value="true" class="pull-right"></li>
+        <li class="menu-item">Ticker interval:<input id="ticker" type="text" name="ticker" size="7" maxlength="5" value="" class="pull-right"></li>
       </ul>
     </div>
   </body>
