--- a/index.html
+++ b/index.html
@@ -1,157 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Clock</title>
-    <link rel="stylesheet" href="main.css" media="screen" charset="utf-8">
-    <script src="vendor/moment-with-locales.min.js"></script>
-    <script src="vendor/moment-timezone-with-data-2010-2020.min.js"></script>
-    <script src="vendor/jquery-1.12.1.min.js"></script>
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div class="background-image" id="background"></div>
-    <div class="top">
-      <div class="watch-container">
-        <div id="watch">
-          <div class="hours">
-            <div class="unit">Hours</div>
-            <div class="digit-container">
-              <span class="digit" id="hour1">0</span>
-            </div>
-            <div class="digit-container">
-              <span class="digit" id="hour2">0</span>
-            </div>
-          </div>
-          <div class="watch-separator-container">
-            <span class="watch-separator">:</span>
-          </div>
-          <div class="minutes">
-            <div class="unit">Minutes</div>
-            <div class="digit-container">
-              <span class="digit" id="minute1">0</span>
-            </div>
-            <div class="digit-container">
-              <span class="digit" id="minute2">0</span>
-            </div>
-          </div>
-          <div class="watch-separator-container">
-            <span class="watch-separator">:</span>
-          </div>
-          <div class="seconds">
-            <div class="unit">Seconds</div>
-            <div class="digit-container">
-              <span class="digit" id="second1">0</span>
-            </div>
-            <div class="digit-container">
-              <span class="digit" id="second2">0</span>
-            </div>
-          </div>
-        </div>
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/main.b4a89432.css">  <body ng-app="ibigtApp"> <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]--> <!-- Add your site or application content here --> <div class="background"></div> <div class="background-color-overlay"></div> <div class="header"> <div class="navbar navbar-default" role="navigation"> <div class="container"> <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="#/">ibigt</a> </div> <div class="collapse navbar-collapse" id="js-navbar-collapse"> <ul class="nav navbar-nav navbar-right"> <li class="active"><a href="#/">Home</a></li> <li><a ng-href="#/about">About</a></li> <li><a ng-href="#/">Contact</a></li> </ul> </div> </div> </div> </div> <div class="container"> <div ng-view=""></div> </div> <!-- <div class="footer">
+      <div class="container">
+        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
+    </div> --> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      <div class="date-container">
-        <div class="date">
-          <div class="date-part">
-            <div id="dayOfWeek">-</div>
-          </div>
-          <div class="date-seporator">|</div>
-          <div class="date-part" style="width: 200px">
-            <div id="dayAndMonth">
-              <span id="dayOfMonth">-</span> of <span id="month"></span>
-            </div>
-          </div>
-          <div class="date-seporator">|</div>
-          <div class="date-part">
-            <div id="year">-</div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="bottom">
-      <div class="separator"></div>
-      <div class="zones">
-        <div class="zone-container">
-          <span data-index="0" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="1" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="2" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="3" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="4" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="5" class="zone">-</span>
-        </div>
-        <div class="zone-separator"></div>
-        <div class="zone-container">
-          <span data-index="6" class="zone">-</span>
-        </div>
-      </div>
-      <div class="selector">
-        <div data-index="0" class="hexagon">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="1" class="hexagon">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="2" class="hexagon">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="3" class="hexagon active">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="4" class="hexagon">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="5" class="hexagon">&#x2B22;</div>
-        <div class="hex-separator"></div>
-        <div data-index="6" class="hexagon">&#x2B22;</div>
-      </div>
-      <div class="names">
-        <div class="name-container">
-          <span data-index="0" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="1" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="2" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="3" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="4" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="5" class="name">-</span>
-        </div>
-        <div class="name-separator"></div>
-        <div class="name-container">
-          <span data-index="6" class="name">-</span>
-        </div>
-      </div>
-    </div>
-    <div id="drawer">
-      <ul class="menu-list">
-        <li class="menu-item"><span>Show city backgrounds</span><input id="cityBG" type="checkbox" name="cityBG" value="true" class="pull-right" checked></li>
-        <li class="menu-item"><span>Hide timezones</span><input id="hideTZ" type="checkbox" name="hideTZ" value="true" class="pull-right"></li>
-        <li class="menu-item"><span>Hide city names</span><input id="hideNames" type="checkbox" name="hideNames" value="true" class="pull-right"></li>
-        <li class="menu-item">Ticker interval:<input id="ticker" type="text" name="ticker" size="7" maxlength="5" value="" class="pull-right"></li>
-      </ul>
-    </div>
-  </body>
-</html>
+       ga('create', 'UA-XXXXX-X');
+       ga('send', 'pageview');</script> <script src="scripts/vendor.ff4b495e.js"></script> <script src="scripts/scripts.85b6444f.js"></script>  
