--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
-<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/main.b4a89432.css">  <body ng-app="ibigtApp"> <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]--> <!-- Add your site or application content here --> <div class="background"></div> <div class="background-color-overlay"></div> <div class="header"> <div class="navbar navbar-default" role="navigation"> <div class="container"> <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="#/">ibigt</a> </div> <div class="collapse navbar-collapse" id="js-navbar-collapse"> <ul class="nav navbar-nav navbar-right"> <li class="active"><a href="#/">Home</a></li> <li><a ng-href="#/about">About</a></li> <li><a ng-href="#/">Contact</a></li> </ul> </div> </div> </div> </div> <div class="container"> <div ng-view=""></div> </div> <!-- <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div> --> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.ff4b495e.js"></script> <script src="scripts/scripts.85b6444f.js"></script>  
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>L1 - Homework</title>
+	</head>
+	<body>
+		<table width="1024" align="center">
+			<tbody>
+				<tr>
+					<td colspan="4" align="center">
+						<h1>Lesson 1 - Homework</h1>
+					</td>
+				</tr>
+				<tr height="100">
+					<td align="center" width="25%">
+						Homework
+					</td>
+					<td align="center" width="25%">
+						<a href="pages/classwork.html">Classwork</a>
+					</td>
+					<td align="center" width="25%">
+						<a href="pages/images.html">Images</a>
+					</td>
+					<td align="center" width="25%">
+						<a href="pages/form.html">Form</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<table border="0" width="1024" align="center" height="500" cellpadding="30">
+			<tbody>
+				<tr>
+					<td width="25%" valign="top">
+						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img\enlarge_brain.jpg" alt="ad1" width="100%"></a>
+					</td>
+					<td valign="top">
+						<h2>Rickrolling</h2>
+						<p>
+							Rickrolling, alternatively rick-rolling, is a prank and an <a href="https://en.wikipedia.org/wiki/Internet_meme">Internet meme</a> involving an unexpected appearance of the music video for the 1987 <a href="https://en.wikipedia.org/wiki/Rick_Astley">Rick Astley</a> song "<a href="https://en.wikipedia.org/wiki/Never_Gonna_Give_You_Up">Never Gonna Give You Up</a>".
+							The meme is a type of bait and switch using a disguised hyperlink.
+							Those led to the music video believing that they were accessing some unrelated material are said to have been <i>rickrolled</i>.<sup><a href="http://knowyourmeme.com/memes/rickroll">[1]</a></sup>
+							The trend has extended to disruptive or humorous appearances of the song in other situations, such as a live appearance of Astley himself in the 2008 Macy's Thanksgiving Day Parade in New York.<sup><a href="http://www.telegraph.co.uk/news/newstopics/howaboutthat/3534073/Macys-Thanksgiving-Day-parade-Rick-Astley-performs-his-own-Rickroll.html">[2]</a></sup>
+						</p>
+						<br>
+						<h4>Rick Astley - Never Gonna Give You Up</h4>
+						<audio controls>
+						  <source src="https://upload.wikimedia.org/wikipedia/en/d/d0/Rick_Astley_-_Never_Gonna_Give_You_Up.ogg" type="audio/ogg">
+						Your browser does not support the audio element.
+						</audio>
+						<br>
+						<br>
+						<br>
+						<h3>Effects on Astley and reaction</h3>
+						<p>
+							In a March 2008 interview, Astley said that he found the rickrolling of Scientology to be "hilarious"; he also said that he will not try to capitalise on the rickroll phenomenon with a new recording or remix of his own, but that he would be happy to have other artists remix it.
+							Overall, Astley is not troubled by the phenomenon, stating that he finds it "bizarre and funny" and that his only concern is that his "daughter doesn't get embarrassed about it."
+							 A spokesperson for Astley's record label released a comment which showed that Astley's interest with the phenomenon had faded, as they stated, "I'm sorry, but he's done talking about Rickrolling".
+						</p>
+					</td>
+					<td width="25%" valign="top">
+						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img\access_issues.jpg" alt="ad2" width="100%"></a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
+</html>
